@@ -186,19 +186,19 @@ my %MAP_OUT = (
     guimenuitem    => {},
     textobject     => { block => 1 },
     varlistentry   => { block => 1, id_node => 'term' },
-    term           => { newline_after => 1 },
-    colspec        => { newline_after => 1 },
-    areaspec       => { block => 1 },
-    areaset        => { block => 1, keep_id => 1 },
-    area           => { newline_after => 1, keep_id => 1 },
-    calloutlist  => { block => 1 },
-    callout      => { block => 1 },
-    procedure    => { block => 1, newline_after => 1 },
-    appendix     => { block => 1 },
-    appendixinfo => { block => 1 },
-    cmdsynopsis  => { block => 1 },
-    arg          => { block => 1 },
-    group        => { block => 1 },
+    term         => { newline_after => 1 },
+    colspec      => { newline_after => 1 },
+    areaspec     => { block         => 1 },
+    areaset      => { block         => 1, keep_id => 1 },
+    area         => { newline_after => 1, keep_id => 1 },
+    calloutlist  => { block         => 1 },
+    callout      => { block         => 1 },
+    procedure    => { block         => 1, newline_after => 1 },
+    appendix     => { block         => 1 },
+    appendixinfo => { block         => 1 },
+    cmdsynopsis  => { block         => 1 },
+    arg          => { block         => 1 },
+    group        => { block         => 1 },
     accel         => {},
     blockquote    => { block => 1 },
     classname     => {},
